# examples

./: .gitignore  README.md
ai/function_calling/: Cargo.toml  README.md
ai/function_calling/src/: main.rs
computer_networking/udp_protocol/: Cargo.toml
computer_networking/udp_protocol/src/: main.rs
concurrency/basics/: README.md
concurrency/basics/src/: main.rs
cryptography/encrypted-json-key/: README.md  deploy.ts  package-lock.json
design_pattern/dependency_injection/: README.md
design_pattern/dependency_injection/src/: model.rs
design_pattern/extension_traits/src/: main.rs
design_patterns/dependency_injection/: README.md
design_patterns/dependency_injection/src/: product_repo.rs
design_patterns/extension_traits/: README.md
design_patterns/type_state/: README.md
distributed_systems/microservices/grpc/src/: server.rs
distributed_systems/microservices/json_rpc/: README.md
distributed_systems/microservices/json_rpc/api_client/: add.bru
distributed_systems/microservices/json_rpc/src/: main.rs
distributed_systems/serverless_edge/cloudflare_workers/: Cargo.toml  README.md  wrangler.toml
frameworks/immature_axum/: askama.toml
frontend/: README.md
frontend/next/: README.md
frontend/react/: README.md
frontend/react/stock-price/: index.html  package-lock.json
frontend/react/stock-price-js/: .env
frontend/tailwind/food/: package-lock.json  package.json
general_practices/request_validator/: README.md
general_practices/request_validator/api_client/: post_handler.bru
general_practices/request_validator/src/: main.rs  validator.rs
hardware/: README.md
immature_axum_example/: .env.example  .gitignore  LICENSE  README.md
immature_axum_example/src/: lib.rs
memory_management/basics/: README.md
memory_management/basics/src/: main.rs
microservices/grpc/: Cargo.toml  README.md
microservices/grpc/proto/: helloworld.proto
microservices/grpc/src/: client.rs
microservices/json_rpc/: Cargo.toml
microservices/json_rpc/api_client/: say_hello.bru
networking/application_layer/pingora/: Cargo.toml  READMME.md
networking/application_layer/pingora/api_client/: health.bru  login.bru
networking/application_layer/pingora/src/: gateway.rs  load_balancer.rs  reverse_proxy.rs  server.rs
networking/application_layer/sse_stream/: Cargo.toml  README.md
networking/application_layer/sse_stream/src/: client.rs  server.rs
networking/chat/: README.md
networking/code_share/: README.md
networking/code_share/templates/: index.html
networking/session_layer/code_share/: Cargo.toml
networking/session_layer/code_share/src/backend/: cache.rs  model.rs  server.rs
networking/transport_layer/udp_protocol/: README.md
networking/udp_protocol/src/: main.rs
observability/logging/src/: main.rs
react/stock-price/: .env  package.json
security/cryptography/encrypted-json-key/: .env.example  .gitignore  encryptJsonKey.ts  package.json
smart-contract/: README.md
smart-contract/ethers_examples/: README.md
software_engineering/best_practices/request_validator/: Cargo.toml
software_engineering/frameworks/immature_axum/: Cargo.toml  Dockerfile  docker-compose.yaml
software_engineering/frameworks/immature_axum/docs/api_handler_examples/: custom_json_extractor.md  middleware_custom_header.md
software_engineering/frameworks/immature_axum/src/: main.rs
software_engineering/frameworks/immature_axum/src/application_core/domain_layer/models/: article.rs  mod.rs
software_engineering/frameworks/immature_axum/src/periphery_adapters/: mod.rs
software_engineering/frameworks/immature_axum/src/periphery_adapters/driven_infrastructure_interface/: persistence_adapter.rs
software_engineering/frameworks/immature_axum/src/periphery_adapters/driving_presentation_interface/: mod.rs
software_engineering/frameworks/immature_axum/src/periphery_adapters/driving_presentation_interface/gui_controller/api_routing/handlers/: create_task.rs  index.rs  partial_update_task.rs
software_engineering/frameworks/immature_axum/src/periphery_adapters/driving_presentation_interface/gui_view/templates/: spa_index.html
software_engineering/frameworks/immature_axum/src/periphery_adapters/driving_presentation_interface/gui_view/templates/partials/: edit.html  list.html
streaming/chat/: Cargo.toml
streaming/chat/src/: main.rs
(+51 files in other folders)
