[package]
name = "function_calling"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-rs = { version = "0.2.6", features = ["tool-implementations", "macros", "ollama-rs-macros"] }
reqwest = "0.12.14"
schemars = { version = "0.8.22", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
