[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.4"
tokio = { version = "1.42.0", features = ["full"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"
