[package]
name = "pingora"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.83", optional = true }
axum = { version = "0.8.0-alpha.1", optional = true }
env_logger = { version = "0.11.5", optional = true }
log = { version = "0.4.22", optional = true }
pingora-core = { version = "0.4.0", optional = true }
pingora-http = { version = "0.4.0", optional = true }
pingora-load-balancing = { version = "0.4.0", optional = true }
pingora-proxy = { version = "0.4.0", optional = true }
tokio = { version = "1.42.0", features = ["full"], optional = true }

[features]
server = ["axum", "tokio"]
proxy = [
    "pingora-proxy",
    "pingora-load-balancing",
    "pingora-http",
    "pingora-core",
    "async-trait",
    "log",
    "env_logger",
]

[[bin]]
name = "server"
path = "src/server.rs"
required-features = ["server"]

[[bin]]
name = "load_balancer"
path = "src/load_balancer.rs"
required-features = ["proxy"]

[[bin]]
name = "reverse_proxy"
path = "src/reverse_proxy.rs"
required-features = ["proxy"]

[[bin]]
name = "gateway"
path = "src/gateway.rs"
required-features = ["proxy"]
