[package]
name = "code_share"
version = "0.1.0"
edition = "2021"

[features]
frontend = ["askama", "tokio", "axum"]
# frontend = ["askama_axum", "askama", "tokio", "axum"]
backend = ["axum", "tokio", "serde", "tower-http", "serde_json"]

[dependencies]
askama = { version = "0.12.1", optional = true }
# askama_axum = { version = "0.4.0", optional = true }
axum = { version = "0.7.9", features = ["ws", "json"], optional = true }
serde = { version = "1.0.215", features = ["derive"], optional = true }
serde_json = { version = "1.0.133", optional = true }
tokio = { version = "1.41.1", features = ["full"], optional = true }
tower-http = { version = "0.6.2", features = ["cors"], optional = true }

[[bin]]
name = "frontend"
path = "src/frontend/client.rs"
required-features = ["frontend"]

[[bin]]
name = "backend"
path = "src/backend/server.rs"
required-features = ["backend"]
