[package]
name = "axum_example"
version = "0.1.0"
edition = "2021"

[dependencies]
# gui_controller
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy_macro = "0.15.7"
jsonwebtoken = "9.3.0"
sea-orm = { version = "1.0.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.9.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "time"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
validator = { version = "0.18.1", features = ["derive"] }

# gui_view
tower-livereload = "0.9.3"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
rand = "0.8.5"

[dev-dependencies]
